netlink: specs: nfsd: replace underscores with dashes in names (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53683,6 +53683,7 @@
 	patches.suse/msft-hv-3283-net-mana-Record-doorbell-physical-address-in-PF-mode.patch
 	patches.suse/bnxt-properly-flush-XDP-redirect-lists.patch
 	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
+	patches.suse/netlink-specs-nfsd-replace-underscores-with-dashes-i.patch
 	patches.suse/netlink-specs-dpll-replace-underscores-with-dashes-i.patch
 	patches.suse/HID-wacom-fix-memory-leak-on-kobject-creation-failur.patch
 	patches.suse/HID-wacom-fix-memory-leak-on-sysfs-attribute-creatio.patch
