--- a/series.conf
+++ b/series.conf
@@ -53685,6 +53685,7 @@
 	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
 	patches.suse/netlink-specs-nfsd-replace-underscores-with-dashes-i.patch
 	patches.suse/netlink-specs-dpll-replace-underscores-with-dashes-i.patch
+	patches.suse/netlink-specs-tc-replace-underscores-with-dashes-in-.patch
 	patches.suse/HID-wacom-fix-memory-leak-on-kobject-creation-failur.patch
 	patches.suse/HID-wacom-fix-memory-leak-on-sysfs-attribute-creatio.patch
 	patches.suse/HID-wacom-fix-kobject-reference-count-leak.patch
