e1000: Move cancel_work_sync to avoid deadlock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53610,6 +53610,7 @@
 	patches.suse/net-mdiobus-Fix-potential-out-of-bounds-clause-45-re.patch
 	patches.suse/i40e-return-false-from-i40e_reset_vf-if-reset-is-in-.patch
 	patches.suse/i40e-retry-VFLR-handling-if-there-is-ongoing-VF-rese.patch
+	patches.suse/e1000-Move-cancel_work_sync-to-avoid-deadlock.patch
 	patches.suse/net-mlx5-Ensure-fw-pages-are-always-allocated-on-sam.patch
 	patches.suse/net-mlx5-Fix-ECVF-vports-unload-on-shutdown-flow.patch
 	patches.suse/net-mlx5-Fix-return-value-when-searching-for-existin.patch
