s390: Add z17 elf platform (LTC#214086 bsc#1245540).

--- a/series.conf
+++ b/series.conf
@@ -31908,6 +31908,7 @@
 	patches.suse/drm-tests-cmdline-Fix-drm_display_mode-memory-leak.patch
 	patches.suse/drm-tests-modes-Fix-drm_display_mode-memory-leak.patch
 	patches.suse/drm-tests-probe-helper-Fix-drm_display_mode-memory-l.patch
+	patches.suse/s390-Add-z17-elf-platform.patch
 	patches.suse/ACPI-PPTT-Fix-coding-mistakes-in-a-couple-of-sizeof-.patch
 	patches.suse/ACPI-EC-Set-ec_no_wakeup-for-Lenovo-Go-S.patch
 	patches.suse/iommu-mediatek-Fix-NULL-pointer-deference-in-mtk_iom.patch
