scsi: s390: zfcp: Ensure synchronous unit_add (git-fixes bsc#1245597).

--- a/series.conf
+++ b/series.conf
@@ -9570,6 +9570,7 @@
 	patches.suse/drm-meson-fix-more-rounding-issues-with-59.94Hz-mode.patch
 	patches.suse/udmabuf-use-sgtable-based-scatterlist-wrappers.patch
 	patches.suse/scsi-iscsi-Fix-incorrect-error-path-labels-for-flashnode-o.patch
+	patches.suse/scsi-s390-zfcp-Ensure-synchronous-unit_add.patch
 	patches.suse/msft-hv-3282-scsi-storvsc-Increase-the-timeouts-to-storvsc_timeou.patch
 	patches.suse/drivers-rapidio-rio_cm.c-prevent-possible-heap-overw.patch
 	patches.suse/nvme-always-punt-polled-uring_cmd-end_io-work-to-tas.patch
