--- a/series.conf
+++ b/series.conf
@@ -3887,6 +3887,7 @@
 	patches.suse/x86-sev-Change-TSC-MSR-behavior-for-Secure-TSC-enabl.patch
 	patches.suse/x86-sev-Prevent-GUEST_TSC_FREQ-MSR-interception-for-.patch
 	patches.suse/x86-sev-Prevent-RDTSC-RDTSCP-interception-for-Secure.patch
+	patches.suse/x86-sev-Mark-the-TSC-in-a-secure-TSC-guest-as-reliab.patch
 	patches.suse/x86-tsc-Init-the-TSC-for-Secure-TSC-guests.patch
 	patches.suse/x86-cpu-Expose-only-stepping-min-max-interface.patch
 	patches.suse/x86-mtrr-Rename-mtrr_overwrite_state-to-guest_force_.patch
