btrfs: remove the subpage related warning message (bsc#1241492).

--- a/series.conf
+++ b/series.conf
@@ -7219,6 +7219,7 @@
 	patches.suse/btrfs-get-zone-unusable-bytes-while-holding-lock-at-.patch
 	patches.suse/btrfs-get-used-bytes-while-holding-lock-at-btrfs_rec.patch
 	patches.suse/btrfs-fix-reclaimed-bytes-accounting-after-automatic.patch
+	patches.suse/btrfs-remove-the-subpage-related-warning-message.patch
 	patches.suse/btrfs-fix-non-empty-delayed-iputs-list-on-unmount-du.patch
 	patches.suse/btrfs-fix-block-group-refcount-race-in-btrfs_create_.patch
 	patches.suse/btrfs-prepare-btrfs_page_mkwrite-for-large-folios.patch
