bpf, sockmap: Fix sk_msg_reset_curr (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -29280,6 +29280,7 @@
 	patches.suse/wifi-ipw2x00-libipw_rx_any-fix-bad-alignment.patch
 	patches.suse/wifi-brcmfmac-Fix-oops-due-to-NULL-pointer-dereferen.patch
 	patches.suse/bpf-sockmap-Several-fixes-to-bpf_msg_pop_data.patch
+	patches.suse/bpf-sockmap-Fix-sk_msg_reset_curr.patch
 	patches.suse/Bluetooth-btusb-mediatek-add-callback-function-in-bt.patch
 	patches.suse/Bluetooth-btusb-Add-RTL8852BE-device-0489-e123-to-de.patch
 	patches.suse/Bluetooth-hci_core-Fix-not-checking-skb-length-on-hc.patch
