Revert "mmc: sdhci: Disable SD card clock before changing parameters" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32771,6 +32771,7 @@
 	patches.suse/mmc-core-sd-Apply-BROKEN_SD_DISCARD-quirk-earlier.patch
 	patches.suse/mtk-sd-Fix-a-pagefault-in-dma_unmap_sg-for-not-prepa.patch
 	patches.suse/mtk-sd-Prevent-memory-corruption-from-DMA-map-failur.patch
+	patches.suse/Revert-mmc-sdhci-Disable-SD-card-clock-before-changi.patch
 
 	########################################################
 	# end of sorted patches
