mtk-sd: Prevent memory corruption from DMA map failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32770,6 +32770,7 @@
 	patches.suse/rtc-cmos-use-spin_lock_irqsave-in-cmos_interrupt.patch
 	patches.suse/mmc-core-sd-Apply-BROKEN_SD_DISCARD-quirk-earlier.patch
 	patches.suse/mtk-sd-Fix-a-pagefault-in-dma_unmap_sg-for-not-prepa.patch
+	patches.suse/mtk-sd-Prevent-memory-corruption-from-DMA-map-failur.patch
 
 	########################################################
 	# end of sorted patches
