mtk-sd: Fix a pagefault in dma_unmap_sg() for not prepared data (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32769,6 +32769,7 @@
 	patches.suse/staging-rtl8723bs-Avoid-memset-in-aes_cipher-and-aes.patch
 	patches.suse/rtc-cmos-use-spin_lock_irqsave-in-cmos_interrupt.patch
 	patches.suse/mmc-core-sd-Apply-BROKEN_SD_DISCARD-quirk-earlier.patch
+	patches.suse/mtk-sd-Fix-a-pagefault-in-dma_unmap_sg-for-not-prepa.patch
 
 	########################################################
 	# end of sorted patches
