--- a/series.conf
+++ b/series.conf
@@ -32772,6 +32772,7 @@
 	patches.suse/mtk-sd-Fix-a-pagefault-in-dma_unmap_sg-for-not-prepa.patch
 	patches.suse/mtk-sd-Prevent-memory-corruption-from-DMA-map-failur.patch
 	patches.suse/Revert-mmc-sdhci-Disable-SD-card-clock-before-changi.patch
+	patches.suse/mtk-sd-reset-host-mrq-on-prepare_data-error.patch
 
 	########################################################
 	# end of sorted patches
