--- a/series.conf
+++ b/series.conf
@@ -9663,6 +9663,7 @@
 	patches.suse/rtc-pcf2127-fix-SPI-command-byte-for-PCF2131.patch
 	patches.suse/rtc-pcf2127-add-missing-semicolon-after-statement.patch
 	patches.suse/RDMA-mlx5-reduce-stack-usage-in-mlx5_ib_ufile_hw_cle.patch
+	patches.suse/RDMA-mlx5-Fix-unsafe-xarray-access-in-implicit-ODP-h.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
