RDMA/mlx5: Initialize obj_event->obj_sub_list before xa_insert (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -9664,6 +9664,7 @@
 	patches.suse/rtc-pcf2127-add-missing-semicolon-after-statement.patch
 	patches.suse/RDMA-mlx5-reduce-stack-usage-in-mlx5_ib_ufile_hw_cle.patch
 	patches.suse/RDMA-mlx5-Fix-unsafe-xarray-access-in-implicit-ODP-h.patch
+	patches.suse/RDMA-mlx5-Initialize-obj_event-obj_sub_list-before-x.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
