--- a/series.conf
+++ b/series.conf
@@ -9665,6 +9665,7 @@
 	patches.suse/RDMA-mlx5-reduce-stack-usage-in-mlx5_ib_ufile_hw_cle.patch
 	patches.suse/RDMA-mlx5-Fix-unsafe-xarray-access-in-implicit-ODP-h.patch
 	patches.suse/RDMA-mlx5-Initialize-obj_event-obj_sub_list-before-x.patch
+	patches.suse/IB-mlx5-Fix-potential-deadlock-in-MR-deregistration.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
