RDMA/mlx5: Fix HW counters query for non-representor devices (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -9666,6 +9666,7 @@
 	patches.suse/RDMA-mlx5-Fix-unsafe-xarray-access-in-implicit-ODP-h.patch
 	patches.suse/RDMA-mlx5-Initialize-obj_event-obj_sub_list-before-x.patch
 	patches.suse/IB-mlx5-Fix-potential-deadlock-in-MR-deregistration.patch
+	patches.suse/RDMA-mlx5-Fix-HW-counters-query-for-non-representor-.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
