--- a/series.conf
+++ b/series.conf
@@ -9667,6 +9667,7 @@
 	patches.suse/RDMA-mlx5-Initialize-obj_event-obj_sub_list-before-x.patch
 	patches.suse/IB-mlx5-Fix-potential-deadlock-in-MR-deregistration.patch
 	patches.suse/RDMA-mlx5-Fix-HW-counters-query-for-non-representor-.patch
+	patches.suse/RDMA-mlx5-Fix-CC-counters-query-for-MPV.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
