--- a/series.conf
+++ b/series.conf
@@ -9668,6 +9668,7 @@
 	patches.suse/IB-mlx5-Fix-potential-deadlock-in-MR-deregistration.patch
 	patches.suse/RDMA-mlx5-Fix-HW-counters-query-for-non-representor-.patch
 	patches.suse/RDMA-mlx5-Fix-CC-counters-query-for-MPV.patch
+	patches.suse/RDMA-mlx5-Fix-vport-loopback-for-MPV-device.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
