--- a/series.conf
+++ b/series.conf
@@ -32768,6 +32768,7 @@
 	patches.suse/serial-imx-Restore-original-RXTL-for-console-to-fix-.patch
 	patches.suse/staging-rtl8723bs-Avoid-memset-in-aes_cipher-and-aes.patch
 	patches.suse/rtc-cmos-use-spin_lock_irqsave-in-cmos_interrupt.patch
+	patches.suse/RDMA-mlx5-Initialize-obj_event-obj_sub_list-before-x.patch
 
 	########################################################
 	# end of sorted patches
