--- a/series.conf
+++ b/series.conf
@@ -53717,6 +53717,7 @@
 	patches.suse/serial-imx-Restore-original-RXTL-for-console-to-fix-.patch
 	patches.suse/staging-rtl8723bs-Avoid-memset-in-aes_cipher-and-aes.patch
 	patches.suse/rtc-cmos-use-spin_lock_irqsave-in-cmos_interrupt.patch
+	patches.suse/RDMA-mlx5-reduce-stack-usage-in-mlx5_ib_ufile_hw_cle.patch
 
 	########################################################
 	# end of sorted patches
