--- a/series.conf
+++ b/series.conf
@@ -32769,6 +32769,7 @@
 	patches.suse/staging-rtl8723bs-Avoid-memset-in-aes_cipher-and-aes.patch
 	patches.suse/rtc-cmos-use-spin_lock_irqsave-in-cmos_interrupt.patch
 	patches.suse/RDMA-mlx5-Initialize-obj_event-obj_sub_list-before-x.patch
+	patches.suse/RDMA-mlx5-Fix-HW-counters-query-for-non-representor-.patch
 
 	########################################################
 	# end of sorted patches
