--- a/series.conf
+++ b/series.conf
@@ -32770,6 +32770,7 @@
 	patches.suse/rtc-cmos-use-spin_lock_irqsave-in-cmos_interrupt.patch
 	patches.suse/RDMA-mlx5-Initialize-obj_event-obj_sub_list-before-x.patch
 	patches.suse/RDMA-mlx5-Fix-HW-counters-query-for-non-representor-.patch
+	patches.suse/RDMA-mlx5-Fix-CC-counters-query-for-MPV.patch
 
 	########################################################
 	# end of sorted patches
