RDMA/mlx5: Fix vport loopback for MPV device (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -32771,6 +32771,7 @@
 	patches.suse/RDMA-mlx5-Initialize-obj_event-obj_sub_list-before-x.patch
 	patches.suse/RDMA-mlx5-Fix-HW-counters-query-for-non-representor-.patch
 	patches.suse/RDMA-mlx5-Fix-CC-counters-query-for-MPV.patch
+	patches.suse/RDMA-mlx5-Fix-vport-loopback-for-MPV-device.patch
 
 	########################################################
 	# end of sorted patches
