libbpf: do not compile with -Werror (bsc#1245584).

--- a/series.conf
+++ b/series.conf
@@ -1487,6 +1487,7 @@
 	patches.rpmify/usrmerge-Adjust-module-path-in-the-kernel-sources.patch
 	patches.rpmify/btf-pahole-j1-option.patch
 	patches.rpmify/powerpc-boot-Fix-build-with-gcc-15.patch
+	patches.rpmify/libbpf-do-not-compile-with-Werror.patch
 
 	########################################################
 	# The sorted section should contain all patches that are
