mtk-sd: Fix a pagefault in dma_unmap_sg() for not prepared data (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9663,6 +9663,7 @@
 	patches.suse/rtc-pcf2127-fix-SPI-command-byte-for-PCF2131.patch
 	patches.suse/rtc-pcf2127-add-missing-semicolon-after-statement.patch
 	patches.suse/mmc-core-sd-Apply-BROKEN_SD_DISCARD-quirk-earlier.patch
+	patches.suse/mtk-sd-Fix-a-pagefault-in-dma_unmap_sg-for-not-prepa.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
