--- a/series.conf
+++ b/series.conf
@@ -9664,6 +9664,7 @@
 	patches.suse/rtc-pcf2127-add-missing-semicolon-after-statement.patch
 	patches.suse/mmc-core-sd-Apply-BROKEN_SD_DISCARD-quirk-earlier.patch
 	patches.suse/mtk-sd-Fix-a-pagefault-in-dma_unmap_sg-for-not-prepa.patch
+	patches.suse/mtk-sd-Prevent-memory-corruption-from-DMA-map-failur.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
