--- a/series.conf
+++ b/series.conf
@@ -9662,6 +9662,7 @@
 	patches.suse/rtc-cmos-use-spin_lock_irqsave-in-cmos_interrupt.patch
 	patches.suse/rtc-pcf2127-fix-SPI-command-byte-for-PCF2131.patch
 	patches.suse/rtc-pcf2127-add-missing-semicolon-after-statement.patch
+	patches.suse/mmc-core-sd-Apply-BROKEN_SD_DISCARD-quirk-earlier.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
