--- a/series.conf
+++ b/series.conf
@@ -9666,6 +9666,7 @@
 	patches.suse/mtk-sd-Fix-a-pagefault-in-dma_unmap_sg-for-not-prepa.patch
 	patches.suse/mtk-sd-Prevent-memory-corruption-from-DMA-map-failur.patch
 	patches.suse/Revert-mmc-sdhci-Disable-SD-card-clock-before-changi.patch
+	patches.suse/mtk-sd-reset-host-mrq-on-prepare_data-error.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
