--- a/series.conf
+++ b/series.conf
@@ -9663,6 +9663,7 @@
 	patches.suse/rtc-pcf2127-fix-SPI-command-byte-for-PCF2131.patch
 	patches.suse/rtc-pcf2127-add-missing-semicolon-after-statement.patch
 	patches.suse/nfs-Clean-up-proc-net-rpc-nfs-when-nfs_fs_proc_net_init-fails.patch
+	patches.suse/NFSv4-pNFS-Fix-a-race-to-wake-on-NFS_LAYOUT_DRAIN.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
