nfs: Clean up /proc/net/rpc/nfs when nfs_fs_proc_net_init() fails (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32789,6 +32789,7 @@
 	patches.suse/serial-imx-Restore-original-RXTL-for-console-to-fix-.patch
 	patches.suse/staging-rtl8723bs-Avoid-memset-in-aes_cipher-and-aes.patch
 	patches.suse/rtc-cmos-use-spin_lock_irqsave-in-cmos_interrupt.patch
+	patches.suse/nfs-Clean-up-proc-net-rpc-nfs-when-nfs_fs_proc_net_init-fails.patch
 	patches.suse/mmc-core-sd-Apply-BROKEN_SD_DISCARD-quirk-earlier.patch
 	patches.suse/mtk-sd-Fix-a-pagefault-in-dma_unmap_sg-for-not-prepa.patch
 	patches.suse/mtk-sd-Prevent-memory-corruption-from-DMA-map-failur.patch
