--- a/series.conf
+++ b/series.conf
@@ -32790,6 +32790,7 @@
 	patches.suse/staging-rtl8723bs-Avoid-memset-in-aes_cipher-and-aes.patch
 	patches.suse/rtc-cmos-use-spin_lock_irqsave-in-cmos_interrupt.patch
 	patches.suse/nfs-Clean-up-proc-net-rpc-nfs-when-nfs_fs_proc_net_init-fails.patch
+	patches.suse/NFSv4-pNFS-Fix-a-race-to-wake-on-NFS_LAYOUT_DRAIN.patch
 	patches.suse/mmc-core-sd-Apply-BROKEN_SD_DISCARD-quirk-earlier.patch
 	patches.suse/mtk-sd-Fix-a-pagefault-in-dma_unmap_sg-for-not-prepa.patch
 	patches.suse/mtk-sd-Prevent-memory-corruption-from-DMA-map-failur.patch
