s390/pci: Fix stale function handles in error handling (git-fixes bsc#1245647).

--- a/series.conf
+++ b/series.conf
@@ -32789,6 +32789,7 @@
 	patches.suse/serial-imx-Restore-original-RXTL-for-console-to-fix-.patch
 	patches.suse/staging-rtl8723bs-Avoid-memset-in-aes_cipher-and-aes.patch
 	patches.suse/rtc-cmos-use-spin_lock_irqsave-in-cmos_interrupt.patch
+	patches.suse/s390-pci-Fix-stale-function-handles-in-error-handling.patch
 	patches.suse/s390-pci-Do-not-try-re-enabling-load-store-if-device-is-di.patch
 	patches.suse/mmc-core-sd-Apply-BROKEN_SD_DISCARD-quirk-earlier.patch
 	patches.suse/mtk-sd-Fix-a-pagefault-in-dma_unmap_sg-for-not-prepa.patch
