--- a/series.conf
+++ b/series.conf
@@ -8274,6 +8274,7 @@
 	patches.suse/scsi-mpi3mr-Add-level-check-to-control-event-logging.patch
 	patches.suse/dma-contiguous-avoid-warning-about-unused-size_bytes.patch
 	patches.suse/dma-mapping.c-dev_dbg-support-for-dma_addressing_limited.patch
+	patches.suse/dma-mapping-Fix-warning-reported-for-missing-prototype.patch
 	patches.suse/Revert-drivers-core-synchronize-really_probe-and-dev.patch
 	patches.suse/driver-core-introduce-device_set_driver-helper.patch
 	patches.suse/driver-core-fix-potential-NULL-pointer-dereference-i.patch
