dma/mapping.c: dev_dbg support for dma_addressing_limited (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8273,6 +8273,7 @@
 	patches.suse/scsi-ufs-core-Add-NULL-check-in-ufshcd_mcq_compl_pen.patch
 	patches.suse/scsi-mpi3mr-Add-level-check-to-control-event-logging.patch
 	patches.suse/dma-contiguous-avoid-warning-about-unused-size_bytes.patch
+	patches.suse/dma-mapping.c-dev_dbg-support-for-dma_addressing_limited.patch
 	patches.suse/Revert-drivers-core-synchronize-really_probe-and-dev.patch
 	patches.suse/driver-core-introduce-device_set_driver-helper.patch
 	patches.suse/driver-core-fix-potential-NULL-pointer-dereference-i.patch
