blacklist.conf: Add "kallsyms: Match symbols exactly with CONFIG_LTO_CLANG"
We do not build the kernel using clang.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -942,3 +942,4 @@ d5c16492c66fbfca85f36e42363d32212df5927b # feature, not a fix
 d74179708473c649c653f1db280e29875a532e99 # test for new feature, not a fix
 c81a8ab196b5083d5109a51585fcc24fa2055a77 # libbpf is sourced from GitHub and not kernel-source
 b9551da8cf3ade01a50316df8a618fd945723ee0 # libbpf is sourced from GitHub and not kernel-source
+fb6a421fb6153d97cf3058f9bd550b377b76a490 # CONFIG_LTO_CLANG=n
