blacklist.conf: no MIPS on SLE15

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -55,6 +55,7 @@ drivers/net/arcnet/			#ARCnet is not enabled
 drivers/net/ethernet/davicom/           # dm9000 legacy driver
 drivers/net/ethernet/natsemi/sonic.c    #m68k Apple Macintosh
 drivers/net/ethernet/natsemi/sonic.h
+drivers/platform/mips/
 drivers/platform/x86/x86-android-tablets/
 drivers/staging/android
 drivers/video/fbdev/hyperv_fb.c
