objtool: Fix _THIS_IP_ detection for cold functions (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12313,6 +12313,7 @@
 	patches.suse/ext4-do-not-let-fstrim-block-system-suspend.patch
 	patches.suse/ext4-fix-rec_len-verify-error.patch
 	patches.suse/panic-Reenable-preemption-in-WARN-slowpath.patch
+	patches.suse/objtool-Fix-_THIS_IP_-detection-for-cold-functions.patch
 	patches.suse/sched-fair-Optimize-should_we_balance-for-large-SMT-systems.patch
 	patches.suse/sched-fair-Fix-SMT4-group_smt_balance-handling.patch
 	patches.suse/x86-platform-uv-Use-alternate-source-for-socket-to-n.patch
