--- a/series.conf
+++ b/series.conf
@@ -16194,6 +16194,7 @@
 	patches.suse/x86-tdx-Remove-struct-tdx_hypercall_args.patch
 	patches.suse/x86-virt-tdx-Wire-up-basic-SEAMCALL-functions.patch
 	patches.suse/x86-virt-tdx-Make-TDX_MODULE_CALL-handle-SEAMCALL-UD-and-G.patch
+	patches.suse/x86-tdx-Fix-__noreturn-build-warning-around-__tdx_hypercall_fail.patch
 	patches.suse/x86-tdx-mark-tsc-reliable.patch
 	patches.suse/xenbus-fix-error-exit-in-xenbus_init.patch
 	patches.suse/xen-evtchn-Allow-shared-registration-of-IRQ-handers.patch
