objtool: Fix UNWIND_HINT_{SAVE,RESTORE} across basic blocks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -22358,6 +22358,7 @@
 	patches.suse/pstore-inode-Only-d_invalidate-is-needed.patch
 	patches.suse/pstore-zone-Add-a-null-pointer-check-to-the-psz_kmsg.patch
 	patches.suse/VMCI-Fix-memcpy-run-time-warning-in-dg_dispatch_as_h.patch
+	patches.suse/objtool-Fix-UNWIND_HINT_-SAVE-RESTORE-across-basic-blocks.patch
 	patches.suse/x86-relocs-Ignore-relocations-in-.notes-section.patch
 	patches.suse/VMCI-Fix-possible-memcpy-run-time-warning-in-vmci_da.patch
 	patches.suse/overflow-Allow-non-type-arg-to-type_max-and-type_min.patch
