objtool: Ignore dangling jump table entries (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -30854,6 +30854,7 @@
 	patches.suse/KVM-arm64-Fix-alignment-of-kvm_hyp_memcache-allocati.patch
 	patches.suse/msft-hv-3160-KVM-x86-Reject-Hyper-V-s-SEND_IPI-hypercalls-if-loca.patch
 	patches.suse/KVM-nSVM-Enter-guest-mode-before-initializing-nested.patch
+	patches.suse/objtool-Ignore-dangling-jump-table-entries.patch
 	patches.suse/usb-gadget-f_midi-Fixing-wMaxPacketSize-exceeded-iss.patch
 	patches.suse/usb-phy-generic-Use-proper-helper-for-property-detec.patch
 	patches.suse/usb-gadget-udc-renesas_usb3-Fix-compiler-warning.patch
