--- a/blacklist.conf
+++ b/blacklist.conf
@@ -944,3 +944,4 @@ c81a8ab196b5083d5109a51585fcc24fa2055a77 # libbpf is sourced from GitHub and not
 b9551da8cf3ade01a50316df8a618fd945723ee0 # libbpf is sourced from GitHub and not kernel-source
 2c6b640ea08bff1a192bf87fa45246ff1e40767c # Fixes non-backported patch 6f2487bfafce5e6cd6f89e7238a82012f7b9f5ac
 fb6a421fb6153d97cf3058f9bd550b377b76a490 # CONFIG_LTO_CLANG=n
+1154bbd326de4453858cf78cf29420888b3ffd52 # too complex, not worth it
