--- a/series.conf
+++ b/series.conf
@@ -31775,6 +31775,7 @@
 	patches.suse/mptcp-fix-NULL-pointer-in-can_accept_new_subflow.patch
 	patches.suse/selftests-mptcp-fix-incorrect-fd-checks-in-main_loop.patch
 	patches.suse/selftests-mptcp-close-fd_in-before-returning-in-main.patch
+	patches.suse/objtool-Silence-more-KCOV-warnings.patch
 	patches.suse/objtool-spi-amd-Fix-out-of-bounds-stack-access-in-am.patch
 	patches.suse/objtool-media-dib8000-Prevent-divide-by-zero-in-dib8.patch
 	patches.suse/objtool-panic-Disable-SMAP-in-__stack_chk_fail.patch
