--- a/series.conf
+++ b/series.conf
@@ -8777,6 +8777,7 @@
 	patches.suse/btrfs-fix-qgroup-reservation-leak-on-failure-to-allo.patch
 	patches.suse/btrfs-fix-invalid-data-space-release-when-truncating.patch
 	patches.suse/btrfs-fix-wrong-start-offset-for-delalloc-space-rele.patch
+	patches.suse/gfs2-replace-sd_aspace-with-sd_inode.patch
 	patches.suse/gfs2-Don-t-start-unnecessary-transactions-during-log.patch
 	patches.suse/erofs-fix-file-handle-encoding-for-64-bit-NIDs.patch
 	patches.suse/erofs-avoid-using-multiple-devices-with-different-type.patch
