--- a/series.conf
+++ b/series.conf
@@ -8251,6 +8251,7 @@
 	patches.suse/i2c-atr-Fix-wrong-include.patch
 	patches.suse/i2c-cros-ec-tunnel-defer-probe-if-parent-EC-is-not-p.patch
 	patches.suse/fs-move-the-bdex_statx-call-to-vfs_getattr_nosec.patch
+	patches.suse/writeback-fix-false-warning-in-inode_to_wb.patch
 	patches.suse/ima-process_measurement-needlessly-takes-inode_lock-.patch
 	patches.suse/btrfs-zoned-return-EIO-on-RAID1-block-group-write-po.patch
 	patches.suse/virtio_console-fix-missing-byte-order-handling-for-c.patch
