--- a/series.conf
+++ b/series.conf
@@ -1538,6 +1538,7 @@
 	########################################################
 	patches.suse/firmware-qemu_fw_cfg-Do-not-hard-depend-on-CONFIG_HA.patch
 	patches.suse/io_uring-gate-REQ_F_ISREG-on-S_ANON_INODE-as-well.patch
+	patches.suse/Revert-ACPI-battery-negate-current-when-discharging.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
