--- a/series.conf
+++ b/series.conf
@@ -32808,6 +32808,7 @@
 	patches.suse/net-usb-lan78xx-fix-WARN-in-__netif_napi_del_locked-.patch
 	patches.suse/Bluetooth-Prevent-unintended-pause-by-checking-if-ad.patch
 	patches.suse/Bluetooth-hci_sync-revert-some-mesh-modifications.patch
+	patches.suse/Bluetooth-MGMT-set_mesh-update-LE-scan-interval-and-.patch
 
 	########################################################
 	# end of sorted patches
