--- a/series.conf
+++ b/series.conf
@@ -32805,6 +32805,7 @@
 	patches.suse/mtk-sd-Prevent-memory-corruption-from-DMA-map-failur.patch
 	patches.suse/Revert-mmc-sdhci-Disable-SD-card-clock-before-changi.patch
 	patches.suse/mtk-sd-reset-host-mrq-on-prepare_data-error.patch
+	patches.suse/net-usb-lan78xx-fix-WARN-in-__netif_napi_del_locked-.patch
 
 	########################################################
 	# end of sorted patches
