rose: fix dangling neighbour pointers in rose_rt_device_down() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32810,6 +32810,7 @@
 	patches.suse/Bluetooth-hci_sync-revert-some-mesh-modifications.patch
 	patches.suse/Bluetooth-MGMT-set_mesh-update-LE-scan-interval-and-.patch
 	patches.suse/Bluetooth-MGMT-mesh_send-check-instances-prior-disab.patch
+	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
 
 	########################################################
 	# end of sorted patches
