--- a/series.conf
+++ b/series.conf
@@ -53741,6 +53741,7 @@
 	patches.suse/mtk-sd-Prevent-memory-corruption-from-DMA-map-failur.patch
 	patches.suse/Revert-mmc-sdhci-Disable-SD-card-clock-before-changi.patch
 	patches.suse/mtk-sd-reset-host-mrq-on-prepare_data-error.patch
+	patches.suse/Bluetooth-HCI-Set-extended-advertising-data-synchron.patch
 
 	########################################################
 	# end of sorted patches
