Bluetooth: MGMT: set_mesh: update LE scan interval and window (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9684,6 +9684,7 @@
 	patches.suse/net-usb-lan78xx-fix-WARN-in-__netif_napi_del_locked-.patch
 	patches.suse/Bluetooth-Prevent-unintended-pause-by-checking-if-ad.patch
 	patches.suse/Bluetooth-hci_sync-revert-some-mesh-modifications.patch
+	patches.suse/Bluetooth-MGMT-set_mesh-update-LE-scan-interval-and-.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
