rose: fix dangling neighbour pointers in rose_rt_device_down() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9687,6 +9687,7 @@
 	patches.suse/Bluetooth-MGMT-set_mesh-update-LE-scan-interval-and-.patch
 	patches.suse/Bluetooth-MGMT-mesh_send-check-instances-prior-disab.patch
 	patches.suse/Bluetooth-HCI-Set-extended-advertising-data-synchron.patch
+	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
