--- a/series.conf
+++ b/series.conf
@@ -9683,6 +9683,7 @@
 	patches.suse/mtk-sd-reset-host-mrq-on-prepare_data-error.patch
 	patches.suse/net-usb-lan78xx-fix-WARN-in-__netif_napi_del_locked-.patch
 	patches.suse/Bluetooth-Prevent-unintended-pause-by-checking-if-ad.patch
+	patches.suse/Bluetooth-hci_sync-revert-some-mesh-modifications.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
