Bluetooth: HCI: Set extended advertising data synchronously (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9686,6 +9686,7 @@
 	patches.suse/Bluetooth-hci_sync-revert-some-mesh-modifications.patch
 	patches.suse/Bluetooth-MGMT-set_mesh-update-LE-scan-interval-and-.patch
 	patches.suse/Bluetooth-MGMT-mesh_send-check-instances-prior-disab.patch
+	patches.suse/Bluetooth-HCI-Set-extended-advertising-data-synchron.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
