--- a/series.conf
+++ b/series.conf
@@ -9682,6 +9682,7 @@
 	patches.suse/Revert-mmc-sdhci-Disable-SD-card-clock-before-changi.patch
 	patches.suse/mtk-sd-reset-host-mrq-on-prepare_data-error.patch
 	patches.suse/net-usb-lan78xx-fix-WARN-in-__netif_napi_del_locked-.patch
+	patches.suse/Bluetooth-Prevent-unintended-pause-by-checking-if-ad.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
