objtool: Properly disable uaccess validation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31776,6 +31776,7 @@
 	patches.suse/selftests-mptcp-fix-incorrect-fd-checks-in-main_loop.patch
 	patches.suse/selftests-mptcp-close-fd_in-before-returning-in-main.patch
 	patches.suse/objtool-Silence-more-KCOV-warnings.patch
+	patches.suse/objtool-Properly-disable-uaccess-validation.patch
 	patches.suse/objtool-spi-amd-Fix-out-of-bounds-stack-access-in-am.patch
 	patches.suse/objtool-media-dib8000-Prevent-divide-by-zero-in-dib8.patch
 	patches.suse/objtool-panic-Disable-SMAP-in-__stack_chk_fail.patch
