--- a/series.conf
+++ b/series.conf
@@ -31919,6 +31919,7 @@
 	patches.suse/ipv6-Align-behavior-across-nexthops-during-path-sele.patch
 	patches.suse/net-ppp-Add-bound-checking-for-skb-data-on-ppp_sync_.patch
 	patches.suse/objtool-Fix-INSN_CONTEXT_SWITCH-handling-in-validate_unret.patch
+	patches.suse/objtool-Stop-UNRET-validation-on-UD2.patch
 	patches.suse/perf-Fix-hang-while-freeing-sigtrap-event.patch
 	patches.suse/x86-bugs-Rename-entry_ibpb-to-write_ibpb.patch
 	patches.suse/x86-bugs-Use-SBPB-in-write_ibpb-if-applicable.patch
