cgroup/cpuset: Extend kthread_is_per_cpu() check to all PF_NO_SETAFFINITY tasks (bsc#1241166).

--- a/series.conf
+++ b/series.conf
@@ -53057,6 +53057,7 @@
 	patches.suse/platform-x86-thinkpad_acpi-Support-also-NEC-Lavie-X1.patch
 	patches.suse/platform-x86-amd-pmc-Declare-quirk_spurious_8042-for.patch
 	patches.suse/platform-x86-asus-wmi-Fix-wlan_ctrl_by_user-detectio.patch
+	patches.suse/cgroup-cpuset-Extend-kthread_is_per_cpu-check-to-all-PF_NO.patch
 	patches.suse/x86-its-Fix-build-errors-when-CONFIG_MODULES-n.patch
 	patches.suse/btrfs-fix-discard-worker-infinite-loop-after-disabli.patch
 	patches.suse/tpm-tis-Double-the-timeout-B-to-4s.patch
