cgroup/cpuset: Extend kthread_is_per_cpu() check to all PF_NO_SETAFFINITY tasks (bsc#1241166).

--- a/series.conf
+++ b/series.conf
@@ -8609,6 +8609,7 @@
 	patches.suse/platform-x86-thinkpad_acpi-Support-also-NEC-Lavie-X1.patch
 	patches.suse/platform-x86-amd-pmc-Declare-quirk_spurious_8042-for.patch
 	patches.suse/platform-x86-asus-wmi-Fix-wlan_ctrl_by_user-detectio.patch
+	patches.suse/cgroup-cpuset-Extend-kthread_is_per_cpu-check-to-all-PF_NO.patch
 	patches.suse/x86-its-Fix-build-errors-when-CONFIG_MODULES-n.patch
 	patches.suse/arm64-dts-rockchip-Remove-overdrive-mode-OPPs-from-RK3588J.patch
 	patches.suse/arm64-dts-rockchip-Add-pinmuxing-for-eMMC-on-QNAP-TS433.patch
