cgroup,freezer: fix incomplete freezing when attaching tasks (bsc#1245789).

--- a/series.conf
+++ b/series.conf
@@ -32751,6 +32751,7 @@
 	patches.suse/platform-x86-dell_rbu-Fix-list-usage.patch
 	patches.suse/platform-x86-dell_rbu-Stop-overwriting-data-buffer.patch
 	patches.suse/ata-pata_via-Force-PIO-for-ATAPI-devices-on-VT6415-V.patch
+	patches.suse/cgroup-freezer-fix-incomplete-freezing-when-attaching-task.patch
 	patches.suse/hwmon-ftsteutates-Fix-TOCTOU-race-in-fts_read.patch
 	patches.suse/hwmon-occ-Rework-attribute-registration-for-stack-us.patch
 	patches.suse/hwmon-occ-fix-unaligned-accesses.patch
