blacklist.conf: Add 7129ea6e242b rust: clean Rust 1.88.0's `unnecessary_transmutes` lint

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -401,3 +401,4 @@ e1a0202c6bfda24002a3ae2115154fa90104c649 # unneeded, may be taken as a prereq la
 c9b19ea63036fc537a69265acea1b18dabd1cbd3 # fix a warning if CONFIG_NEED_DMA_MAP_STATE=n (alwys 'y' in SUSE configs)
 2e2f925fe737576df2373931c95e1a2b66efdfef # CVE-2025-38048 https://bugzilla.suse.com/show_bug.cgi?id=1245085#c2
 37fb58a7273726e59f9429c89ade5116083a213d # CONFIG_CGROUP_FREEZER=n
+7129ea6e242b00938532537da41ddf5fa3e21471 # rust
