--- a/series.conf
+++ b/series.conf
@@ -32838,6 +32838,7 @@
 	patches.suse/platform-mellanox-mlxbf-tmfifo-fix-vring_desc.len-as.patch
 	patches.suse/platform-mellanox-mlxbf-pmc-Fix-duplicate-event-ID-f.patch
 	patches.suse/platform-mellanox-nvsw-sn2201-Fix-bus-number-in-adap.patch
+	patches.suse/platform-x86-dell-wmi-sysman-Fix-WMI-data-block-retr.patch
 
 	########################################################
 	# end of sorted patches
