Input: xpad - adjust error handling for disconnect (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32824,6 +32824,7 @@
 	patches.suse/drm-i915-gsc-mei-interrupt-top-half-should-be-in-irq.patch
 	patches.suse/drm-exynos-exynos7_drm_decon-add-vblank-check-in-IRQ.patch
 	patches.suse/drm-exynos-fimd-Guard-display-clock-control-with-run.patch
+	patches.suse/Input-xpad-adjust-error-handling-for-disconnect.patch
 
 	########################################################
 	# end of sorted patches
