usb: chipidea: udc: disconnect/reconnect from host when do suspend/resume (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32827,6 +32827,7 @@
 	patches.suse/Input-xpad-adjust-error-handling-for-disconnect.patch
 	patches.suse/Input-iqs7222-explicitly-define-number-of-external-c.patch
 	patches.suse/usb-cdnsp-do-not-disable-slot-for-disabled-slot.patch
+	patches.suse/usb-chipidea-udc-disconnect-reconnect-from-host-when.patch
 
 	########################################################
 	# end of sorted patches
