xhci: Disable stream for xHC controller with XHCI_BROKEN_STREAMS (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32832,6 +32832,7 @@
 	patches.suse/usb-xhci-Skip-xhci_reset-in-xhci_resume-if-xhci-is-b.patch
 	patches.suse/Revert-usb-xhci-Implement-xhci_handshake_check_state.patch
 	patches.suse/usb-typec-altmodes-displayport-do-not-index-invalid-.patch
+	patches.suse/xhci-Disable-stream-for-xHC-controller-with-XHCI_BRO.patch
 
 	########################################################
 	# end of sorted patches
