--- a/series.conf
+++ b/series.conf
@@ -32835,6 +32835,7 @@
 	patches.suse/xhci-Disable-stream-for-xHC-controller-with-XHCI_BRO.patch
 	patches.suse/xhci-dbctty-disable-ECHO-flag-by-default.patch
 	patches.suse/xhci-dbc-Flush-queued-requests-before-stopping-dbc.patch
+	patches.suse/platform-mellanox-mlxbf-tmfifo-fix-vring_desc.len-as.patch
 
 	########################################################
 	# end of sorted patches
