--- a/series.conf
+++ b/series.conf
@@ -32817,6 +32817,7 @@
 	patches.suse/Bluetooth-MGMT-mesh_send-check-instances-prior-disab.patch
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
 	patches.suse/drm-ttm-fix-error-handling-in-ttm_buffer_object_tran.patch
+	patches.suse/drm-bridge-panel-move-prepare_prev_first-handling-to.patch
 
 	########################################################
 	# end of sorted patches
