drm/sched: Increment job count before swapping tail spsc queue (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32818,6 +32818,7 @@
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
 	patches.suse/drm-ttm-fix-error-handling-in-ttm_buffer_object_tran.patch
 	patches.suse/drm-bridge-panel-move-prepare_prev_first-handling-to.patch
+	patches.suse/drm-sched-Increment-job-count-before-swapping-tail-s.patch
 
 	########################################################
 	# end of sorted patches
