drm/i915/selftests: Change mock_request() to return error pointers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32819,6 +32819,7 @@
 	patches.suse/drm-ttm-fix-error-handling-in-ttm_buffer_object_tran.patch
 	patches.suse/drm-bridge-panel-move-prepare_prev_first-handling-to.patch
 	patches.suse/drm-sched-Increment-job-count-before-swapping-tail-s.patch
+	patches.suse/drm-i915-selftests-Change-mock_request-to-return-err.patch
 
 	########################################################
 	# end of sorted patches
