--- a/series.conf
+++ b/series.conf
@@ -32822,6 +32822,7 @@
 	patches.suse/drm-i915-selftests-Change-mock_request-to-return-err.patch
 	patches.suse/drm-i915-gt-Fix-timeline-left-held-on-VMA-alloc-erro.patch
 	patches.suse/drm-i915-gsc-mei-interrupt-top-half-should-be-in-irq.patch
+	patches.suse/drm-exynos-exynos7_drm_decon-add-vblank-check-in-IRQ.patch
 
 	########################################################
 	# end of sorted patches
