platform/mellanox: nvsw-sn2201: Fix bus number in adapter error message (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32837,6 +32837,7 @@
 	patches.suse/xhci-dbc-Flush-queued-requests-before-stopping-dbc.patch
 	patches.suse/platform-mellanox-mlxbf-tmfifo-fix-vring_desc.len-as.patch
 	patches.suse/platform-mellanox-mlxbf-pmc-Fix-duplicate-event-ID-f.patch
+	patches.suse/platform-mellanox-nvsw-sn2201-Fix-bus-number-in-adap.patch
 
 	########################################################
 	# end of sorted patches
