--- a/series.conf
+++ b/series.conf
@@ -32816,6 +32816,7 @@
 	patches.suse/Bluetooth-MGMT-set_mesh-update-LE-scan-interval-and-.patch
 	patches.suse/Bluetooth-MGMT-mesh_send-check-instances-prior-disab.patch
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
+	patches.suse/drm-ttm-fix-error-handling-in-ttm_buffer_object_tran.patch
 
 	########################################################
 	# end of sorted patches
