--- a/series.conf
+++ b/series.conf
@@ -32840,6 +32840,7 @@
 	patches.suse/platform-mellanox-nvsw-sn2201-Fix-bus-number-in-adap.patch
 	patches.suse/platform-x86-dell-wmi-sysman-Fix-WMI-data-block-retr.patch
 	patches.suse/platform-mellanox-mlxreg-lc-Fix-logic-error-in-power.patch
+	patches.suse/platform-x86-think-lmi-Fix-kobject-cleanup.patch
 
 	########################################################
 	# end of sorted patches
