powercap: call put_device() on an error path in powercap_register_control_type() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -30738,6 +30738,7 @@
 	patches.suse/ACPI-property-Fix-return-value-for-nval-0-in-acpi_da.patch
 	patches.suse/ACPI-resource-IRQ-override-for-Eluktronics-MECH-17.patch
 	patches.suse/cpufreq-amd-pstate-Fix-max_perf-updation-with-schedutil.patch
+	patches.suse/powercap-call-put_device-on-an-error-path-in-powerca.patch
 	patches.suse/nvme-pci-Add-TUXEDO-InfinityFlex-to-Samsung-sleep-qu.patch
 	patches.suse/nvme-pci-Add-TUXEDO-IBP-Gen9-to-Samsung-sleep-quirk.patch
 	patches.suse/nvme-fc-go-straight-to-connecting-state-when-initial.patch
