xhci: dbctty: disable ECHO flag by default (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32833,6 +32833,7 @@
 	patches.suse/Revert-usb-xhci-Implement-xhci_handshake_check_state.patch
 	patches.suse/usb-typec-altmodes-displayport-do-not-index-invalid-.patch
 	patches.suse/xhci-Disable-stream-for-xHC-controller-with-XHCI_BRO.patch
+	patches.suse/xhci-dbctty-disable-ECHO-flag-by-default.patch
 
 	########################################################
 	# end of sorted patches
