drm/i915/gsc: mei interrupt top half should be in irq disabled context (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32821,6 +32821,7 @@
 	patches.suse/drm-sched-Increment-job-count-before-swapping-tail-s.patch
 	patches.suse/drm-i915-selftests-Change-mock_request-to-return-err.patch
 	patches.suse/drm-i915-gt-Fix-timeline-left-held-on-VMA-alloc-erro.patch
+	patches.suse/drm-i915-gsc-mei-interrupt-top-half-should-be-in-irq.patch
 
 	########################################################
 	# end of sorted patches
