--- a/series.conf
+++ b/series.conf
@@ -32831,6 +32831,7 @@
 	patches.suse/usb-gadget-u_serial-Fix-race-condition-in-TTY-wakeup.patch
 	patches.suse/usb-xhci-Skip-xhci_reset-in-xhci_resume-if-xhci-is-b.patch
 	patches.suse/Revert-usb-xhci-Implement-xhci_handshake_check_state.patch
+	patches.suse/usb-typec-altmodes-displayport-do-not-index-invalid-.patch
 
 	########################################################
 	# end of sorted patches
