usb: xhci: Skip xhci_reset in xhci_resume if xhci is being removed (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32829,6 +32829,7 @@
 	patches.suse/usb-cdnsp-do-not-disable-slot-for-disabled-slot.patch
 	patches.suse/usb-chipidea-udc-disconnect-reconnect-from-host-when.patch
 	patches.suse/usb-gadget-u_serial-Fix-race-condition-in-TTY-wakeup.patch
+	patches.suse/usb-xhci-Skip-xhci_reset-in-xhci_resume-if-xhci-is-b.patch
 
 	########################################################
 	# end of sorted patches
