usb: cdnsp: do not disable slot for disabled slot (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32826,6 +32826,7 @@
 	patches.suse/drm-exynos-fimd-Guard-display-clock-control-with-run.patch
 	patches.suse/Input-xpad-adjust-error-handling-for-disconnect.patch
 	patches.suse/Input-iqs7222-explicitly-define-number-of-external-c.patch
+	patches.suse/usb-cdnsp-do-not-disable-slot-for-disabled-slot.patch
 
 	########################################################
 	# end of sorted patches
