--- a/series.conf
+++ b/series.conf
@@ -32820,6 +32820,7 @@
 	patches.suse/drm-bridge-panel-move-prepare_prev_first-handling-to.patch
 	patches.suse/drm-sched-Increment-job-count-before-swapping-tail-s.patch
 	patches.suse/drm-i915-selftests-Change-mock_request-to-return-err.patch
+	patches.suse/drm-i915-gt-Fix-timeline-left-held-on-VMA-alloc-erro.patch
 
 	########################################################
 	# end of sorted patches
