platform/x86: think-lmi: Fix sysfs group cleanup (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32841,6 +32841,7 @@
 	patches.suse/platform-x86-dell-wmi-sysman-Fix-WMI-data-block-retr.patch
 	patches.suse/platform-mellanox-mlxreg-lc-Fix-logic-error-in-power.patch
 	patches.suse/platform-x86-think-lmi-Fix-kobject-cleanup.patch
+	patches.suse/platform-x86-think-lmi-Fix-sysfs-group-cleanup.patch
 
 	########################################################
 	# end of sorted patches
