xhci: dbc: Flush queued requests before stopping dbc (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32834,6 +32834,7 @@
 	patches.suse/usb-typec-altmodes-displayport-do-not-index-invalid-.patch
 	patches.suse/xhci-Disable-stream-for-xHC-controller-with-XHCI_BRO.patch
 	patches.suse/xhci-dbctty-disable-ECHO-flag-by-default.patch
+	patches.suse/xhci-dbc-Flush-queued-requests-before-stopping-dbc.patch
 
 	########################################################
 	# end of sorted patches
