platform/mellanox: mlxbf-pmc: Fix duplicate event ID for CACHE_DATA1 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32836,6 +32836,7 @@
 	patches.suse/xhci-dbctty-disable-ECHO-flag-by-default.patch
 	patches.suse/xhci-dbc-Flush-queued-requests-before-stopping-dbc.patch
 	patches.suse/platform-mellanox-mlxbf-tmfifo-fix-vring_desc.len-as.patch
+	patches.suse/platform-mellanox-mlxbf-pmc-Fix-duplicate-event-ID-f.patch
 
 	########################################################
 	# end of sorted patches
