Input: iqs7222 - explicitly define number of external channels (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32825,6 +32825,7 @@
 	patches.suse/drm-exynos-exynos7_drm_decon-add-vblank-check-in-IRQ.patch
 	patches.suse/drm-exynos-fimd-Guard-display-clock-control-with-run.patch
 	patches.suse/Input-xpad-adjust-error-handling-for-disconnect.patch
+	patches.suse/Input-iqs7222-explicitly-define-number-of-external-c.patch
 
 	########################################################
 	# end of sorted patches
