--- a/series.conf
+++ b/series.conf
@@ -32844,6 +32844,7 @@
 	patches.suse/platform-x86-think-lmi-Fix-sysfs-group-cleanup.patch
 	patches.suse/spi-spi-fsl-dspi-Clear-completion-counter-before-ini.patch
 	patches.suse/regulator-gpio-Fix-the-out-of-bounds-access-to-drvda.patch
+	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
 
 	########################################################
 	# end of sorted patches
