--- a/series.conf
+++ b/series.conf
@@ -32842,6 +32842,7 @@
 	patches.suse/platform-mellanox-mlxreg-lc-Fix-logic-error-in-power.patch
 	patches.suse/platform-x86-think-lmi-Fix-kobject-cleanup.patch
 	patches.suse/platform-x86-think-lmi-Fix-sysfs-group-cleanup.patch
+	patches.suse/spi-spi-fsl-dspi-Clear-completion-counter-before-ini.patch
 
 	########################################################
 	# end of sorted patches
