--- a/series.conf
+++ b/series.conf
@@ -53754,6 +53754,7 @@
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
 	patches.suse/drm-amdkfd-Don-t-call-mmput-from-MMU-notifier-callba.patch
 	patches.suse/drm-bridge-aux-hpd-bridge-fix-assignment-of-the-of_n.patch
+	patches.suse/drm-v3d-Disable-interrupts-before-resetting-the-GPU.patch
 
 	########################################################
 	# end of sorted patches
