--- a/series.conf
+++ b/series.conf
@@ -53752,6 +53752,7 @@
 	patches.suse/Bluetooth-MGMT-mesh_send-check-instances-prior-disab.patch
 	patches.suse/Bluetooth-HCI-Set-extended-advertising-data-synchron.patch
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
+	patches.suse/drm-amdkfd-Don-t-call-mmput-from-MMU-notifier-callba.patch
 
 	########################################################
 	# end of sorted patches
