drm/bridge: aux-hpd-bridge: fix assignment of the of_node (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53753,6 +53753,7 @@
 	patches.suse/Bluetooth-HCI-Set-extended-advertising-data-synchron.patch
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
 	patches.suse/drm-amdkfd-Don-t-call-mmput-from-MMU-notifier-callba.patch
+	patches.suse/drm-bridge-aux-hpd-bridge-fix-assignment-of-the-of_n.patch
 
 	########################################################
 	# end of sorted patches
