--- a/series.conf
+++ b/series.conf
@@ -32845,6 +32845,7 @@
 	patches.suse/spi-spi-fsl-dspi-Clear-completion-counter-before-ini.patch
 	patches.suse/regulator-gpio-Fix-the-out-of-bounds-access-to-drvda.patch
 	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
+	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
 
 	########################################################
 	# end of sorted patches
