--- a/series.conf
+++ b/series.conf
@@ -9715,6 +9715,7 @@
 	patches.suse/usb-xhci-Skip-xhci_reset-in-xhci_resume-if-xhci-is-b.patch
 	patches.suse/Revert-usb-xhci-Implement-xhci_handshake_check_state.patch
 	patches.suse/usb-cdnsp-Fix-issue-with-CV-Bad-Descriptor-test.patch
+	patches.suse/usb-typec-altmodes-displayport-do-not-index-invalid-.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
