drm/bridge: aux-hpd-bridge: fix assignment of the of_node (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9696,6 +9696,7 @@
 	patches.suse/drm-amdkfd-Don-t-call-mmput-from-MMU-notifier-callba.patch
 	patches.suse/drm-ttm-fix-error-handling-in-ttm_buffer_object_tran.patch
 	patches.suse/drm-bridge-panel-move-prepare_prev_first-handling-to.patch
+	patches.suse/drm-bridge-aux-hpd-bridge-fix-assignment-of-the-of_n.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
