--- a/series.conf
+++ b/series.conf
@@ -9693,6 +9693,7 @@
 	patches.suse/Bluetooth-MGMT-mesh_send-check-instances-prior-disab.patch
 	patches.suse/Bluetooth-HCI-Set-extended-advertising-data-synchron.patch
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
+	patches.suse/drm-amdkfd-Don-t-call-mmput-from-MMU-notifier-callba.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
