--- a/series.conf
+++ b/series.conf
@@ -9707,6 +9707,7 @@
 	patches.suse/Input-xpad-adjust-error-handling-for-disconnect.patch
 	patches.suse/Input-iqs7222-explicitly-define-number-of-external-c.patch
 	patches.suse/Input-cs40l50-vibra-fix-potential-NULL-dereference-i.patch
+	patches.suse/usb-cdnsp-do-not-disable-slot-for-disabled-slot.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
