usb: xhci: Skip xhci_reset in xhci_resume if xhci is being removed (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9712,6 +9712,7 @@
 	patches.suse/usb-chipidea-udc-disconnect-reconnect-from-host-when.patch
 	patches.suse/Revert-usb-gadget-u_serial-Add-null-pointer-check-in.patch
 	patches.suse/usb-gadget-u_serial-Fix-race-condition-in-TTY-wakeup.patch
+	patches.suse/usb-xhci-Skip-xhci_reset-in-xhci_resume-if-xhci-is-b.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
