--- a/series.conf
+++ b/series.conf
@@ -9701,6 +9701,7 @@
 	patches.suse/drm-v3d-Disable-interrupts-before-resetting-the-GPU.patch
 	patches.suse/drm-i915-selftests-Change-mock_request-to-return-err.patch
 	patches.suse/drm-i915-gt-Fix-timeline-left-held-on-VMA-alloc-erro.patch
+	patches.suse/drm-i915-gsc-mei-interrupt-top-half-should-be-in-irq.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
