--- a/series.conf
+++ b/series.conf
@@ -9717,6 +9717,7 @@
 	patches.suse/usb-cdnsp-Fix-issue-with-CV-Bad-Descriptor-test.patch
 	patches.suse/usb-typec-altmodes-displayport-do-not-index-invalid-.patch
 	patches.suse/usb-dwc3-gadget-Fix-TRB-reclaim-logic-for-short-tran.patch
+	patches.suse/xhci-Disable-stream-for-xHC-controller-with-XHCI_BRO.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
