--- a/series.conf
+++ b/series.conf
@@ -9699,6 +9699,7 @@
 	patches.suse/drm-bridge-aux-hpd-bridge-fix-assignment-of-the-of_n.patch
 	patches.suse/drm-sched-Increment-job-count-before-swapping-tail-s.patch
 	patches.suse/drm-v3d-Disable-interrupts-before-resetting-the-GPU.patch
+	patches.suse/drm-i915-selftests-Change-mock_request-to-return-err.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
