--- a/series.conf
+++ b/series.conf
@@ -9695,6 +9695,7 @@
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
 	patches.suse/drm-amdkfd-Don-t-call-mmput-from-MMU-notifier-callba.patch
 	patches.suse/drm-ttm-fix-error-handling-in-ttm_buffer_object_tran.patch
+	patches.suse/drm-bridge-panel-move-prepare_prev_first-handling-to.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
