--- a/series.conf
+++ b/series.conf
@@ -9719,6 +9719,7 @@
 	patches.suse/usb-dwc3-gadget-Fix-TRB-reclaim-logic-for-short-tran.patch
 	patches.suse/xhci-Disable-stream-for-xHC-controller-with-XHCI_BRO.patch
 	patches.suse/xhci-dbctty-disable-ECHO-flag-by-default.patch
+	patches.suse/xhci-dbc-Flush-queued-requests-before-stopping-dbc.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
