--- a/series.conf
+++ b/series.conf
@@ -9724,6 +9724,7 @@
 	patches.suse/platform-mellanox-mlxbf-pmc-Fix-duplicate-event-ID-f.patch
 	patches.suse/platform-mellanox-nvsw-sn2201-Fix-bus-number-in-adap.patch
 	patches.suse/platform-x86-dell-wmi-sysman-Fix-WMI-data-block-retr.patch
+	patches.suse/platform-mellanox-mlxreg-lc-Fix-logic-error-in-power.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
