Revert "usb: xhci: Implement xhci_handshake_check_state() helper" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9713,6 +9713,7 @@
 	patches.suse/Revert-usb-gadget-u_serial-Add-null-pointer-check-in.patch
 	patches.suse/usb-gadget-u_serial-Fix-race-condition-in-TTY-wakeup.patch
 	patches.suse/usb-xhci-Skip-xhci_reset-in-xhci_resume-if-xhci-is-b.patch
+	patches.suse/Revert-usb-xhci-Implement-xhci_handshake_check_state.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
