--- a/series.conf
+++ b/series.conf
@@ -9708,6 +9708,7 @@
 	patches.suse/Input-iqs7222-explicitly-define-number-of-external-c.patch
 	patches.suse/Input-cs40l50-vibra-fix-potential-NULL-dereference-i.patch
 	patches.suse/usb-cdnsp-do-not-disable-slot-for-disabled-slot.patch
+	patches.suse/usb-dwc3-Abort-suspend-on-soft-disconnect-failure.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
