--- a/series.conf
+++ b/series.conf
@@ -9728,6 +9728,7 @@
 	patches.suse/platform-x86-think-lmi-Fix-kobject-cleanup.patch
 	patches.suse/platform-x86-think-lmi-Fix-sysfs-group-cleanup.patch
 	patches.suse/spi-spi-fsl-dspi-Clear-completion-counter-before-ini.patch
+	patches.suse/regulator-gpio-Fix-the-out-of-bounds-access-to-drvda.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
