usb: dwc3: gadget: Fix TRB reclaim logic for short transfers and ZLPs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9716,6 +9716,7 @@
 	patches.suse/Revert-usb-xhci-Implement-xhci_handshake_check_state.patch
 	patches.suse/usb-cdnsp-Fix-issue-with-CV-Bad-Descriptor-test.patch
 	patches.suse/usb-typec-altmodes-displayport-do-not-index-invalid-.patch
+	patches.suse/usb-dwc3-gadget-Fix-TRB-reclaim-logic-for-short-tran.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
