--- a/series.conf
+++ b/series.conf
@@ -9721,6 +9721,7 @@
 	patches.suse/xhci-dbctty-disable-ECHO-flag-by-default.patch
 	patches.suse/xhci-dbc-Flush-queued-requests-before-stopping-dbc.patch
 	patches.suse/platform-mellanox-mlxbf-tmfifo-fix-vring_desc.len-as.patch
+	patches.suse/platform-mellanox-mlxbf-pmc-Fix-duplicate-event-ID-f.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
