--- a/series.conf
+++ b/series.conf
@@ -9731,6 +9731,7 @@
 	patches.suse/regulator-gpio-Fix-the-out-of-bounds-access-to-drvda.patch
 	patches.suse/firmware-arm_ffa-Fix-memory-leak-by-freeing-notifier.patch
 	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
+	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
