--- a/series.conf
+++ b/series.conf
@@ -9704,6 +9704,7 @@
 	patches.suse/drm-i915-gsc-mei-interrupt-top-half-should-be-in-irq.patch
 	patches.suse/drm-exynos-exynos7_drm_decon-add-vblank-check-in-IRQ.patch
 	patches.suse/drm-exynos-fimd-Guard-display-clock-control-with-run.patch
+	patches.suse/Input-xpad-adjust-error-handling-for-disconnect.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
