--- a/series.conf
+++ b/series.conf
@@ -9720,6 +9720,7 @@
 	patches.suse/xhci-Disable-stream-for-xHC-controller-with-XHCI_BRO.patch
 	patches.suse/xhci-dbctty-disable-ECHO-flag-by-default.patch
 	patches.suse/xhci-dbc-Flush-queued-requests-before-stopping-dbc.patch
+	patches.suse/platform-mellanox-mlxbf-tmfifo-fix-vring_desc.len-as.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
