drm/i915/gt: Fix timeline left held on VMA alloc error (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9700,6 +9700,7 @@
 	patches.suse/drm-sched-Increment-job-count-before-swapping-tail-s.patch
 	patches.suse/drm-v3d-Disable-interrupts-before-resetting-the-GPU.patch
 	patches.suse/drm-i915-selftests-Change-mock_request-to-return-err.patch
+	patches.suse/drm-i915-gt-Fix-timeline-left-held-on-VMA-alloc-erro.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
