drm/v3d: Disable interrupts before resetting the GPU (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9698,6 +9698,7 @@
 	patches.suse/drm-bridge-panel-move-prepare_prev_first-handling-to.patch
 	patches.suse/drm-bridge-aux-hpd-bridge-fix-assignment-of-the-of_n.patch
 	patches.suse/drm-sched-Increment-job-count-before-swapping-tail-s.patch
+	patches.suse/drm-v3d-Disable-interrupts-before-resetting-the-GPU.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
