--- a/series.conf
+++ b/series.conf
@@ -9705,6 +9705,7 @@
 	patches.suse/drm-exynos-exynos7_drm_decon-add-vblank-check-in-IRQ.patch
 	patches.suse/drm-exynos-fimd-Guard-display-clock-control-with-run.patch
 	patches.suse/Input-xpad-adjust-error-handling-for-disconnect.patch
+	patches.suse/Input-iqs7222-explicitly-define-number-of-external-c.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
