usb: gadget: u_serial: Fix race condition in TTY wakeup (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9711,6 +9711,7 @@
 	patches.suse/usb-dwc3-Abort-suspend-on-soft-disconnect-failure.patch
 	patches.suse/usb-chipidea-udc-disconnect-reconnect-from-host-when.patch
 	patches.suse/Revert-usb-gadget-u_serial-Add-null-pointer-check-in.patch
+	patches.suse/usb-gadget-u_serial-Fix-race-condition-in-TTY-wakeup.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
