drm/ttm: fix error handling in ttm_buffer_object_transfer (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9694,6 +9694,7 @@
 	patches.suse/Bluetooth-HCI-Set-extended-advertising-data-synchron.patch
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
 	patches.suse/drm-amdkfd-Don-t-call-mmput-from-MMU-notifier-callba.patch
+	patches.suse/drm-ttm-fix-error-handling-in-ttm_buffer_object_tran.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
