Input: cs40l50-vibra - fix potential NULL dereference in cs40l50_upload_owt() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9706,6 +9706,7 @@
 	patches.suse/drm-exynos-fimd-Guard-display-clock-control-with-run.patch
 	patches.suse/Input-xpad-adjust-error-handling-for-disconnect.patch
 	patches.suse/Input-iqs7222-explicitly-define-number-of-external-c.patch
+	patches.suse/Input-cs40l50-vibra-fix-potential-NULL-dereference-i.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
