--- a/series.conf
+++ b/series.conf
@@ -9709,6 +9709,7 @@
 	patches.suse/Input-cs40l50-vibra-fix-potential-NULL-dereference-i.patch
 	patches.suse/usb-cdnsp-do-not-disable-slot-for-disabled-slot.patch
 	patches.suse/usb-dwc3-Abort-suspend-on-soft-disconnect-failure.patch
+	patches.suse/usb-chipidea-udc-disconnect-reconnect-from-host-when.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
