Revert "usb: gadget: u_serial: Add null pointer check in gs_start_io" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9710,6 +9710,7 @@
 	patches.suse/usb-cdnsp-do-not-disable-slot-for-disabled-slot.patch
 	patches.suse/usb-dwc3-Abort-suspend-on-soft-disconnect-failure.patch
 	patches.suse/usb-chipidea-udc-disconnect-reconnect-from-host-when.patch
+	patches.suse/Revert-usb-gadget-u_serial-Add-null-pointer-check-in.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
