firmware: arm_ffa: Fix memory leak by freeing notifier callback node (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9729,6 +9729,7 @@
 	patches.suse/platform-x86-think-lmi-Fix-sysfs-group-cleanup.patch
 	patches.suse/spi-spi-fsl-dspi-Clear-completion-counter-before-ini.patch
 	patches.suse/regulator-gpio-Fix-the-out-of-bounds-access-to-drvda.patch
+	patches.suse/firmware-arm_ffa-Fix-memory-leak-by-freeing-notifier.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
