--- a/series.conf
+++ b/series.conf
@@ -9703,6 +9703,7 @@
 	patches.suse/drm-i915-gt-Fix-timeline-left-held-on-VMA-alloc-erro.patch
 	patches.suse/drm-i915-gsc-mei-interrupt-top-half-should-be-in-irq.patch
 	patches.suse/drm-exynos-exynos7_drm_decon-add-vblank-check-in-IRQ.patch
+	patches.suse/drm-exynos-fimd-Guard-display-clock-control-with-run.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
