usb: typec: displayport: Fix potential deadlock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8250,6 +8250,7 @@
 	patches.kernel.org/6.12.36-211-btrfs-fix-use-after-free-on-inode-when-scanni.patch
 	patches.kernel.org/6.12.36-212-spi-fsl-qspi-Fix-double-cleanup-in-probe-erro.patch
 	patches.kernel.org/6.12.36-213-Linux-6.12.36.patch
+	patches.kernel.org/usb-typec-displayport-Fix-potential-deadlock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
