drm/amdkfd: Fix race in GWS queue scheduling (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32793,6 +32793,7 @@
 	patches.suse/drm-msm-dsi-dsi_phy_10nm-Fix-missing-initial-VCO-rat.patch
 	patches.suse/drm-i915-pmu-Fix-build-error-with-GCOV-and-AutoFDO-e.patch
 	patches.suse/drm-amdgpu-switch-job-hw_fence-to-amdgpu_fence.patch
+	patches.suse/drm-amdkfd-Fix-race-in-GWS-queue-scheduling.patch
 	patches.suse/drm-ssd130x-fix-ssd132x_clear_screen-columns.patch
 	patches.suse/drm-nouveau-bl-increase-buffer-size-to-avoid-truncat.patch
 	patches.suse/drm-etnaviv-Protect-the-scheduler-s-pending-list-wit.patch
