--- a/series.conf
+++ b/series.conf
@@ -32815,6 +32815,7 @@
 	patches.suse/HID-wacom-fix-kobject-reference-count-leak.patch
 	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
 	patches.suse/ALSA-usb-audio-Fix-out-of-bounds-read-in-snd_usb_get.patch
+	patches.suse/ASoC-amd-yc-Add-DMI-quirk-for-Lenovo-IdeaPad-Slim-5-.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X-7ab6847.patch
 	patches.suse/s390-pkey-Prevent-overflow-in-size-calculation-for-memdup_.patch
 	patches.suse/drm-i915-fix-build-error-some-more.patch
