--- a/series.conf
+++ b/series.conf
@@ -32727,6 +32727,7 @@
 	patches.suse/jffs2-check-jffs2_prealloc_raw_node_refs-result-in-few-other-places.patch
 	patches.suse/ALSA-usb-audio-Add-a-quirk-for-Lenovo-Thinkpad-Thund.patch
 	patches.suse/ALSA-hda-Add-new-pci-id-for-AMD-GPU-display-HD-audio.patch
+	patches.suse/ALSA-hda-Ignore-unsol-events-for-cards-being-shut-do.patch
 	patches.suse/ALSA-usb-audio-Add-implicit-feedback-quirk-for-RODE-.patch
 	patches.suse/ASoC-codecs-hda-Fix-RPM-usage-count-underflow.patch
 	patches.suse/ASoC-Intel-avs-Fix-deadlock-when-the-failing-IPC-is-.patch
