--- a/series.conf
+++ b/series.conf
@@ -32695,6 +32695,7 @@
 	patches.suse/vt-remove-VT_RESIZE-and-VT_RESIZEX-from-vt_compat_io.patch
 	patches.suse/usb-typec-mux-do-not-return-on-EOPNOTSUPP-in-mux-swi.patch
 	patches.suse/usb-typec-displayport-Receive-DP-Status-Update-NAK-r.patch
+	patches.suse/usb-cdc-wdm-avoid-setting-WDM_READ-for-ZLP-s.patch
 	patches.suse/usb-renesas_usbhs-Reorder-clock-handling-and-power-m.patch
 	patches.suse/usb-typec-ucsi-fix-Clang-Wsign-conversion-warning.patch
 	patches.suse/thunderbolt-Do-not-double-dequeue-a-configuration-re.patch
