--- a/series.conf
+++ b/series.conf
@@ -32806,6 +32806,7 @@
 	patches.suse/PCI-PM-Set-up-runtime-PM-even-for-devices-without-PC.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/msft-hv-3283-net-mana-Record-doorbell-physical-address-in-PF-mode.patch
+	patches.suse/Bluetooth-L2CAP-Fix-L2CAP-MTU-negotiation.patch
 	patches.suse/bnxt-properly-flush-XDP-redirect-lists.patch
 	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
 	patches.suse/netlink-specs-dpll-replace-underscores-with-dashes-i.patch
