--- a/series.conf
+++ b/series.conf
@@ -32688,6 +32688,7 @@
 	patches.suse/iio-filter-admv8818-fix-range-calculation.patch
 	patches.suse/iio-filter-admv8818-Support-frequencies-2-32.patch
 	patches.suse/iio-adc-ad7124-Fix-3dB-filter-frequency-reading.patch
+	patches.suse/iio-adc-ad_sigma_delta-Fix-use-of-uninitialized-stat.patch
 	patches.suse/staging-iio-ad5933-Correct-settling-cycles-encoding-.patch
 	patches.suse/serial-Fix-potential-null-ptr-deref-in-mlb_usio_prob.patch
 	patches.suse/vt-remove-VT_RESIZE-and-VT_RESIZEX-from-vt_compat_io.patch
