ASoC: codec: wcd9335: Convert to GPIO descriptors (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32399,6 +32399,7 @@
 	patches.suse/Documentation-rtla-Fix-typo-in-common_timerlat_descr.patch
 	patches.suse/ALSA-usb-audio-Add-Pioneer-DJ-DJM-V10-support.patch
 	patches.suse/ALSA-usb-audio-Rename-Pioneer-mixer-channel-controls.patch
+	patches.suse/ASoC-codec-wcd9335-Convert-to-GPIO-descriptors.patch
 	patches.suse/ASoC-tas2770-Power-cycle-amp-on-ISENSE-VSENSE-change.patch
 	patches.suse/ASoC-tas2764-Reinit-cache-on-part-reset.patch
 	patches.suse/ASoC-tas2764-Enable-main-IRQs.patch
