--- a/series.conf
+++ b/series.conf
@@ -32645,6 +32645,7 @@
 	patches.suse/PCI-dw-rockchip-Fix-PHY-function-call-sequence-in-ro.patch
 	patches.suse/PCI-dwc-Make-link-training-more-robust-by-setting-PO.patch
 	patches.suse/phy-qcom-qmp-usb-Fix-an-NULL-vs-IS_ERR-bug.patch
+	patches.suse/dmaengine-xilinx_dma-Set-dma_device-directions.patch
 	patches.suse/dmaengine-ti-Add-NULL-check-in-udma_probe.patch
 	patches.suse/rtc-sh-assign-correct-interrupts-with-DT.patch
 	patches.suse/rtc-at91rm9200-drop-unused-module-alias.patch
