--- a/series.conf
+++ b/series.conf
@@ -32693,6 +32693,7 @@
 	patches.suse/staging-iio-ad5933-Correct-settling-cycles-encoding-.patch
 	patches.suse/serial-Fix-potential-null-ptr-deref-in-mlb_usio_prob.patch
 	patches.suse/vt-remove-VT_RESIZE-and-VT_RESIZEX-from-vt_compat_io.patch
+	patches.suse/usb-typec-mux-do-not-return-on-EOPNOTSUPP-in-mux-swi.patch
 	patches.suse/usb-renesas_usbhs-Reorder-clock-handling-and-power-m.patch
 	patches.suse/usb-typec-ucsi-fix-Clang-Wsign-conversion-warning.patch
 	patches.suse/thunderbolt-Do-not-double-dequeue-a-configuration-re.patch
