drm/bridge: ti-sn65dsi86: make use of debugfs_init callback (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32462,6 +32462,7 @@
 	patches.suse/media-uvcvideo-Fix-deferred-probing-error.patch
 	patches.suse/drm-vmwgfx-Add-seqno-waiter-for-sync_files.patch
 	patches.suse/drm-udl-Unregister-device-before-cleaning-up-on-disc.patch
+	patches.suse/drm-bridge-ti-sn65dsi86-make-use-of-debugfs_init-cal.patch
 	patches.suse/drm-bridge-cdns-dsi-Fix-connecting-to-next-bridge.patch
 	patches.suse/drm-bridge-cdns-dsi-Fix-phy-de-init-and-flag-it-so.patch
 	patches.suse/drm-bridge-cdns-dsi-Fix-the-clock-variable-for-mode_.patch
