ASoC: codecs: wcd9335: Handle nicer probe deferral and simplify with dev_err_probe() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26883,6 +26883,7 @@
 	patches.suse/ALSA-usb-Fix-UBSAN-warning-in-parse_audio_unit.patch
 	patches.suse/ASoc-tas2781-Enable-RCA-based-playback-without-DSP-f.patch
 	patches.suse/ASoC-cs35l56-Accept-values-greater-than-0-as-IRQ-num.patch
+	patches.suse/ASoC-codecs-wcd9335-Handle-nicer-probe-deferral-and-.patch
 	patches.suse/ASoC-SOF-ipc4-topology-Use-correct-queue_id-for-requ.patch
 	patches.suse/ASoC-Intel-sof_sdw-fix-jack-detection-on-ADL-N-varia.patch
 	patches.suse/ASoC-Intel-sof_sdw-add-quirk-for-Dell-SKU-0B8C.patch
