amd/amdkfd: fix a kfd_process ref leak (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32675,6 +32675,7 @@
 	patches.suse/PM-sleep-Fix-power.is_suspended-cleanup-for-direct-c.patch
 	patches.suse/drm-i915-gem-Allow-EXEC_CAPTURE-on-recoverable-conte.patch
 	patches.suse/drm-amdgpu-amdgpu_vram_mgr_new-Clamp-lpfn-to-total-v.patch
+	patches.suse/amd-amdkfd-fix-a-kfd_process-ref-leak.patch
 	patches.suse/drm-amd-display-Add-null-pointer-check-for-get_first.patch
 	patches.suse/bus-mhi-host-Fix-conflict-between-power_up-and-SYSER.patch
 	patches.suse/iio-adc-ad7606_spi-fix-reg-write-value-mask.patch
