drm/amdgpu: seq64 memory unmap uses uninterruptible lock (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53563,6 +53563,7 @@
 	patches.suse/drm-i915-gem-Allow-EXEC_CAPTURE-on-recoverable-conte.patch
 	patches.suse/Revert-drm-i915-gem-Allow-EXEC_CAPTURE-on-recoverabl.patch
 	patches.suse/drm-xe-Make-xe_gt_freq-part-of-the-Documentation.patch
+	patches.suse/drm-amdgpu-seq64-memory-unmap-uses-uninterruptible-l.patch
 	patches.suse/drm-amd-display-Add-null-pointer-check-for-get_first.patch
 	patches.suse/drm-i915-guc-Check-if-expecting-reply-before-decreme.patch
 	patches.suse/drm-i915-psr-Fix-using-wrong-mask-in-REG_FIELD_PREP.patch
