drm/xe: Fix taking invalid lock on wedge (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53319,6 +53319,7 @@
 	patches.suse/media-platform-mtk-mdp3-Remove-unused-mdp_get_plat_d.patch
 	patches.suse/media-verisilicon-Free-post-processor-buffers-on-err.patch
 	patches.suse/drm-xe-d3cold-Set-power-state-to-D3Cold-during-s2idl.patch
+	patches.suse/drm-xe-Fix-taking-invalid-lock-on-wedge.patch
 	patches.suse/drm-vmwgfx-Add-seqno-waiter-for-sync_files.patch
 	patches.suse/drm-vmwgfx-Add-error-path-for-xa_store-in-vmw_bo_add.patch
 	patches.suse/drm-vmwgfx-Fix-dumb-buffer-leak.patch
