drm/i915/dsi: Fix off by one in BXT_MIPI_TRANS_VTOTAL (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53703,6 +53703,7 @@
 	patches.suse/drm-msm-Fix-CP_RESET_CONTEXT_STATE-bitfield-names.patch
 	patches.suse/drm-msm-a7xx-Call-CP_RESET_CONTEXT_STATE.patch
 	patches.suse/drm-i915-pmu-Fix-build-error-with-GCOV-and-AutoFDO-e.patch
+	patches.suse/drm-i915-dsi-Fix-off-by-one-in-BXT_MIPI_TRANS_VTOTAL.patch
 	patches.suse/drm-amdgpu-switch-job-hw_fence-to-amdgpu_fence.patch
 	patches.suse/drm-ssd130x-fix-ssd132x_clear_screen-columns.patch
 	patches.suse/drm-nouveau-bl-increase-buffer-size-to-avoid-truncat.patch
